# ChangeLog for x11-themes/gnome-backgrounds
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/ChangeLog,v 1.139 2011/03/22 19:52:40 ranger Exp $

  22 Mar 2011; Brent Baude <ranger@gentoo.org>
  gnome-backgrounds-2.32.0.ebuild:
  Marking gnome-backgrounds-2.32.0 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gnome-backgrounds-2.32.0.ebuild:
  ppc64 stable wrt #353436

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org>
  gnome-backgrounds-2.32.0.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gnome-backgrounds-2.32.0.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  gnome-backgrounds-2.32.0.ebuild:
  Stable on amd64 wrt bug #353436

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-backgrounds-2.30.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #324077

  14 Oct 2010; Markus Meier <maekke@gentoo.org>
  gnome-backgrounds-2.30.0.ebuild:
  arm stable, bug #324077

  12 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-backgrounds-2.24.1.ebuild:
  Clean up old revision.

*gnome-backgrounds-2.32.0 (12 Oct 2010)

  12 Oct 2010; Pacho Ramos <pacho@gentoo.org>
  +gnome-backgrounds-2.32.0.ebuild:
  Version bump for Gnome 2.32: Add individual copyright notices for the
  images and updated translations.

  07 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gnome-backgrounds-2.30.0.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  gnome-backgrounds-2.30.0.ebuild:
  Marked ppc for bug #324077.

  24 Aug 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-backgrounds-2.24.0.ebuild:
  Clean up old revision.

  18 Aug 2010; Markus Meier <maekke@gentoo.org>
  gnome-backgrounds-2.28.0.ebuild:
  arm stable, bug #314899

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-backgrounds-2.28.0.ebuild: