@@ -1,21 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/Attic/gnome-backgrounds-2.30.0.ebuild,v 1.8 2010/10/17 15:01:45 armin76 Exp $
-
-GCONF_DEBUG="no"
-
-inherit gnome2
-
-DESCRIPTION="A set of backgrounds packaged with the GNOME desktop"
-HOMEPAGE="http://www.gnome.org/"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="alpha amd64 arm ia64 ppc ppc64 sh sparc x86 ~x86-fbsd"
-IUSE=""
-
-RDEPEND=""
-DEPEND="sys-devel/gettext
-	>=dev-util/intltool-0.35"
-
-DOCS="AUTHORS ChangeLog NEWS README"
