@@ -1,7 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/Attic/gnome-backgrounds-2.28.0.ebuild,v 1.6 2010/08/18 21:19:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/Attic/gnome-backgrounds-3.0.1.ebuild,v 1.1 2011/04/30 16:18:22 nirbheek Exp $
 
+EAPI="3"
 GCONF_DEBUG="no"
 
 inherit gnome2
@@ -11,11 +12,11 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 arm ia64 ~ppc ~ppc64 sh sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND=""
 DEPEND="sys-devel/gettext
-	>=dev-util/intltool-0.35"
+	>=dev-util/intltool-0.40.0"
 
 DOCS="AUTHORS ChangeLog NEWS README"
