@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/gnome-backgrounds
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/ChangeLog,v 1.139 2011/03/22 19:52:40 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-backgrounds/ChangeLog,v 1.140 2011/04/30 16:18:22 nirbheek Exp $
+
+*gnome-backgrounds-3.0.1 (30 Apr 2011)
+
+  30 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  -gnome-backgrounds-2.28.0.ebuild, -gnome-backgrounds-2.30.0.ebuild,
+  +gnome-backgrounds-3.0.1.ebuild:
+  Bump to 3.0.1, remove old
 
   22 Mar 2011; Brent Baude <ranger@gentoo.org>
   gnome-backgrounds-2.32.0.ebuild:
